# fastapi-auth-setup-v2

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6161c1570547_added_forgot_password_functionality.py  6ab1304fb160_added_expires_field_to_signup_otp.py  71f9a4975765_hashed_otps.py  8317ede36a75_change_otp_value_to_string_type.py  c03805ea4282_made_expires_field_non_nullable.py  dce732830070_added_id_to_signup_otp_and_made_primary_.py  f33ce0213680_added_signup_otp.py
src/: __init__.py  config.py
src/auth/: models.py  routes.py  schemas.py  services.py
src/db/: main.py
src/emailServices/: main.py
src/templates/: email-verification-otp.html  forgot-password-otp.html  welcome-email.html
src/utils/: auth.py  otp.py
